--- a/ds4drv.conf
+++ b/ds4drv.conf
@@ -21,7 +21,7 @@
 ##
 # Controller settings
 #
-# This is the default profile for each controller.
+# This is the default profile for each controller. It is created before the other profiles as "default".
 # Multiple controllers slots are defined by increasing the number.
 #
 # Controller sections contain:
