--- a/ds4drv.conf
+++ b/ds4drv.conf
@@ -33,16 +33,16 @@
 ##
 [controller:1]
 # Enables LED flash on low battery
-#battery-flash = true
+battery-flash = true
 
 # Sets LED color
-#led = 0000ff
+led = 0000ff
 
 # Enables profile switching
-#profile-toggle = PS
+profile-toggle = R1+L1+PS
 
 # Profiles to cycle through
-#profiles = xpad,kbmouse
+profiles = xpad,kbmouse
 
 
 ##
